End of day Day 26.08.25
